@@ -55,6 +55,7 @@ public:
         COL_LENGTH,
         COL_COMPOSER,
         COL_PERFORMER,
+        COL_GROUPING,
         COL_FILENAME,
         COL_PATH,
 
