@@ -37,6 +37,7 @@
 26. Add "Refresh" action to hover actions for podcasts.
 27. Remove superfluous blank space from the top of the cover tooltip.
 28. Fix looking for cover-art with MPD's new cue track file listing.
+29. Add Grouping tag support to playlists and queue.
 
 2.4.2
 -----
